<resources>
    <string name="app_name">Restaurant</string>
    <string name="welcome_to_our_restaurant">Welcome to our restaurant!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="add">Add</string>
    <string name="enter_item">Enter item</string>
    <string name="place_order">Place Order</string>
    <string name="quantity">Quantity</string>
    <string-array name="Registration_option">
        <item> Customer </item>
        <item> Employee </item>
        <item> Owner </item>
    </string-array>
    <string-array name="Job_option">
        <item> Chef </item>
        <item> Waiter </item>
    </string-array>
    <string-array name="customer_option">
        <item> View order </item>
        <item> Create order </item>
    </string-array>
</resources>