<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage"
    tools:context=".register.EmployeeRegister.EmployeeRegActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddressEmployee"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginBottom="172dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPasswordEmployee"
        android:layout_width="188dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="186dp"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddressEmployee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <Button
        android:id="@+id/buttonSignUpEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordEmployee"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="193dp"
        android:layout_height="36dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="11dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUpEmployee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordEmployee"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>